--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,3 +1,7 @@
+.footer {
+    margin-top: 20px;
+}
+
 .footer .container {
     display: flex;
     align-items: start;
@@ -76,32 +80,32 @@
 @media (max-width: 1024px) {
     .footer {
         max-width: 960px;
-        border: 1px solid black;
         margin: 0 auto;
+        margin-top: 20px;
     }
 }
 
 @media (max-width: 992px) {
     .footer {
         max-width: 960px;
-        border: 1px solid black;
         margin: 0 auto;
+        margin-top: 20px;
     }
 }
 
 @media (max-width: 768px) {
     .footer {
         max-width: 720px;
-        border: 1px solid black;
         margin: 0 auto;
+        margin-top: 20px;
     }
 }
 
 @media (max-width: 425px) {
     .footer {
         max-width: 425px;
-        border: 1px solid black;
         margin: 0 auto;
+        margin-top: 20px;
     }
     .footer .container {
         display: flex;
