about prototype is ready

--- a/src/components/banner/Banner.css
+++ b/src/components/banner/Banner.css
@@ -30,7 +30,6 @@
     width: 600px;
     height: auto;
     box-sizing: border-box;
-    /* padding: 10px; */
 }
 
 .banner-image .banner-image-back {
@@ -90,10 +89,15 @@
         justify-content: center;
     }
     .banner-title {
-        max-width: 500px;
+        max-width: 470px;
     }
     .banner-title h2 {
         font-size: 30px;
+        text-wrap: wrap;
+    }
+    .banner-title p {
+        font-size: 24px;
+        text-wrap: wrap;
     }
     .banner-image {
         max-width: 500px;
@@ -112,17 +116,19 @@
         justify-content: center;
     }
     .banner-title {
-        max-width: 400px;
+        max-width: 396px;
         margin-top: 10px;
     }
     .banner-title h2 {
-        font-size: 24px;
+        font-size: 20px;
         text-align: center;
+        text-wrap: wrap;
     }
 
     .banner-title p {
-        font-size: 18px;
+        font-size: 16px;
         text-align: center;
+        text-wrap: wrap;
     }
 
     .banner-image {
