--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -199,12 +199,61 @@
     .navs.nav-mobile ul li a {
         color: black;
     }
+    .burger {
+        width: 30px;
+        height: 20px;
+    }
+    .burger span {
+        display: block;
+        position: absolute;
+        height: 3px;
+        width: 100%;
+        background: #fff;
+        border-radius: 9px;
+        opacity: 1;
+        left: 0;
+        transform: rotate(0deg);
+        transition: .25s ease-in-out;
+    }
+    .burger span:nth-of-type(1) {
+        top: 0px;
+        transform-origin: left center;
+    }
+      
+    .burger span:nth-of-type(2) {
+        top: 50%;
+        transform: translateY(-50%);
+        transform-origin: left center;
+    }
+      
+    .burger span:nth-of-type(3) {
+        top: 100%;
+        transform-origin: left center;
+        transform: translateY(-50%);
+    }
+      
+    .burger input:checked ~ span:nth-of-type(1) {
+        top: 0;
+        left: 10px;
+        transform: rotate(47deg);
+    }
+      
+    .burger input:checked ~ span:nth-of-type(2) {
+        width: 0%;
+        opacity: 0;
+    }
+      
+    .burger input:checked ~ span:nth-of-type(3) {
+        top: 22px;
+        left: 10px;
+        width: 100%;
+        transform: rotate(-406deg);
+    }
 }
 
 @media (max-width: 768px) {
     .header {
         max-width: 720px;
-        
     }
     .navs {
         display: none;
@@ -249,6 +298,56 @@
     
       .navs.nav-mobile ul li {
         display: block;
+    }
+    .burger {
+        width: 30px;
+        height: 20px;
+    }
+    .burger span {
+        display: block;
+        position: absolute;
+        height: 3px;
+        width: 100%;
+        background: #fff;
+        border-radius: 9px;
+        opacity: 1;
+        left: 0;
+        transform: rotate(0deg);
+        transition: .25s ease-in-out;
+    }
+    .burger span:nth-of-type(1) {
+        top: 0px;
+        transform-origin: left center;
+    }
+      
+    .burger span:nth-of-type(2) {
+        top: 50%;
+        transform: translateY(-50%);
+        transform-origin: left center;
+    }
+      
+    .burger span:nth-of-type(3) {
+        top: 100%;
+        transform-origin: left center;
+        transform: translateY(-50%);
+    }
+      
+    .burger input:checked ~ span:nth-of-type(1) {
+        top: 0;
+        left: 10px;
+        transform: rotate(47deg);
+    }
+      
+    .burger input:checked ~ span:nth-of-type(2) {
+        width: 0%;
+        opacity: 0;
+    }
+      
+    .burger input:checked ~ span:nth-of-type(3) {
+        top: 22px;
+        left: 10px;
+        width: 100%;
+        transform: rotate(-406deg);
     }
 }
 
@@ -301,7 +400,53 @@
     }
 
     .burger {
-        width: 40px;
-        height: 30px;
-      }
+        width: 30px;
+        height: 20px;
+    }
+    .burger span {
+        display: block;
+        position: absolute;
+        height: 3px;
+        width: 100%;
+        background: #fff;
+        border-radius: 9px;
+        opacity: 1;
+        left: 0;
+        transform: rotate(0deg);
+        transition: .25s ease-in-out;
+    }
+    .burger span:nth-of-type(1) {
+        top: 0px;
+        transform-origin: left center;
+    }
+      
+    .burger span:nth-of-type(2) {
+        top: 50%;
+        transform: translateY(-50%);
+        transform-origin: left center;
+    }
+      
+    .burger span:nth-of-type(3) {
+        top: 100%;
+        transform-origin: left center;
+        transform: translateY(-50%);
+    }
+      
+    .burger input:checked ~ span:nth-of-type(1) {
+        top: 0;
+        left: 10px;
+        transform: rotate(47deg);
+    }
+      
+    .burger input:checked ~ span:nth-of-type(2) {
+        width: 0%;
+        opacity: 0;
+    }
+      
+    .burger input:checked ~ span:nth-of-type(3) {
+        top: 22px;
+        left: 10px;
+        width: 100%;
+        transform: rotate(-406deg);
+    }
 }
