--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -1,3 +1,8 @@
+.about {
+    width: 1440px;
+    margin: 0 auto;
+}
+
 .about-text {
     display: flex;
     flex-direction: column;
@@ -40,6 +45,7 @@
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
+    margin: 0;
 }
 
 .about-left {
@@ -129,11 +135,14 @@
 .about-right-pay {
     color: #212529;
     font-size: 16px;
-    text-wrap: wrap;
+    /* text-wrap: wrap; */
 }
 
 
 @media (max-width: 1024px) {
+    .about {
+        max-width: 1024px;
+    }
     .about-text {
         max-width: 960px;
         margin: 0 auto;
@@ -152,6 +161,9 @@
 }
 
 @media (max-width: 992px) {
+    .about {
+        max-width: 992px;
+    }
     .about-text {
         max-width: 960px;
         margin: 0 auto;
@@ -169,37 +181,46 @@
 }
 
 @media (max-width: 768px) {
+    .about {
+        max-width: 768px;
+    }
     .about-text {
         max-width: 720px;
         margin: 0 auto;
         margin-top: 20px;
     }
     .about-description {
-        max-width: 746px;
-        margin: 0 auto;
-        margin-top: 30px;
+        display: flex;
+        align-items: center;
+        gap: 30px;
+        padding: 20px 20px;
     }
     .about-description .container {
-        max-width: 700px;
+        max-width: 720px;
+        box-sizing: border-box;
     }
     .descripton-content {
-        max-width: 746px;
+        max-width: 726px;
+        display: flex;
+        gap: 10px;
         margin: 0 auto;
     }
 }
 
 @media (max-width: 425px) {
-    .about .container .about-text {
+    .about {
+        max-width: 425px;
+    }
+    .about .about-text {
         padding: 0 10px;
     }
-    .about .container .about-description {
+    .about .about-description {
         padding: 0 5px;
     }
     .about-text {
         max-width: 400px;
         margin: 0 auto;
         margin-top: 20px;
-        text-wrap: wrap;
     }
     .about-description {
         max-width: 390px;
