--- a/src/components/product/Product.css
+++ b/src/components/product/Product.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: auto;
     margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .product-title {
@@ -38,4 +39,77 @@
 .item-active {
     background: #47b2e4;
     color: #fff;
+}
+
+.product-box-card {
+    margin-top: 30px;
+}
+
+.card {
+    width: 336px;
+    min-height: 300px;
+    border: 1px solid black;
+}
+
+@media (max-width: 1024px) {
+    .product {
+        width: 960px;
+        margin: 0 auto;
+    }
+    .categories ul {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+    }
+    .categories ul li {
+        text-align: center;
+    }
+}
+
+@media (max-width: 992px) {
+    .product {
+        width: 960px;
+        margin: 0 auto;
+    }
+    .categories ul {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+    }
+    .categories ul li {
+        text-align: center;
+    }
+}
+
+@media (max-width: 768px) {
+    .product {
+        width: 720px;
+        margin: 0 auto;
+    }
+    .categories ul {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+    }
+    .categories ul li {
+        text-align: center;
+    }
+}
+
+@media (max-width: 425px) {
+    .product {
+        width: 401px;
+        margin: 0 auto;
+    }
+    .categories ul {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .categories ul li {
+        display: flex;
+        width: 100%;
+    }
+    .card {
+        margin: 0 auto;
+    }
 }
