--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -404,55 +404,56 @@
     .navs.nav-mobile ul li {
         display: block;
     }
+}
 
-    .burger {
-        width: 30px;
-        height: 20px;
+@media (max-width: 375px) {
+    .header {
+        padding: 10px 15px;
     }
-    .burger span {
+    .navs {
+        display: none;
+    }
+    .nav-mobile {
+        width: 400px;
+        margin: 0 auto;
+        box-sizing: border-box;
+        padding: 10px 30px;
         display: block;
-        position: absolute;
-        height: 3px;
-        width: 100%;
-        background: #fff;
-        border-radius: 9px;
-        opacity: 1;
+        position: fixed;
+        overflow: hidden;
+        top: 50px;
+        right: 0;
         left: 0;
-        transform: rotate(0deg);
-        transition: .25s ease-in-out;
+        bottom: 0;
+        background: rgba(40, 58, 90, 0.9);
+        transition: 0.3s;
+        z-index: 999;
+        transform: translateX(0);
     }
-    .burger span:nth-of-type(1) {
-        top: 0px;
-        transform-origin: left center;
+
+    .navs.nav-mobile ul {
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        top: 15px;
+        right: 15px;
+        bottom: 15px;
+        left: 15px;
+        padding: 10px 10px;
+        border-radius: 10px;
+        background-color: #fff;
+        overflow-y: auto;
+        transition: 0.3s;
     }
-      
-    .burger span:nth-of-type(2) {
-        top: 50%;
-        transform: translateY(-50%);
-        transform-origin: left center;
+
+    .navs.nav-mobile ul {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 20px;
     }
-      
-    .burger span:nth-of-type(3) {
-        top: 100%;
-        transform-origin: left center;
-        transform: translateY(-50%);
-    }
-      
-    .burger input:checked ~ span:nth-of-type(1) {
-        top: 0;
-        left: 10px;
-        transform: rotate(47deg);
-    }
-      
-    .burger input:checked ~ span:nth-of-type(2) {
-        width: 0%;
-        opacity: 0;
-    }
-      
-    .burger input:checked ~ span:nth-of-type(3) {
-        top: 22px;
-        left: 10px;
-        width: 100%;
-        transform: rotate(-406deg);
+    
+    .navs.nav-mobile ul li {
+        display: block;
     }
 }
