--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -112,7 +112,7 @@
         max-width: 768px;
     }
     .contact-title {
-        max-width: 768px;
+        max-width: 720px;
         margin: 0 auto;
     }
     .contact-item {
@@ -135,11 +135,11 @@
         max-width: 425px;
     }
     .contact-title {
-        max-width: 400px;
+        max-width: 375px;
         margin: 0 auto;
     }
     .contact-text {
-        width: 300px;
+        max-width: 300px;
         font-size: 32px;
         margin: 0 auto;
         margin-top: 30px;
@@ -153,11 +153,43 @@
         margin: 0 auto;
     }
     .contact-item-title {
-        max-width: 380px;
+        max-width: 375px;
         margin: 0 auto;
     }
     .contact-map {
-        max-width: 380px;
+        max-width: 375px;
+        margin: 0 auto;
+    }
+}
+
+@media (max-width: 375px) {
+    .contact {
+        max-width: 375px;
+    }
+    .contact-title {
+        max-width: 320px;
+        margin: 0 auto;
+    }
+    .contact-text {
+        max-width: 320px;
+        font-size: 32px;
+        margin: 0 auto;
+        margin-top: 30px;
+        margin-bottom: 30px;
+        text-wrap: wrap;
+    }
+    .contact-item {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        margin: 0 auto;
+    }
+    .contact-item-title {
+        max-width: 320px;
+        margin: 0 auto;
+    }
+    .contact-map {
+        max-width: 320px;
         margin: 0 auto;
     }
 }
