--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -110,7 +110,22 @@
 
 @media (max-width: 425px) {
     .footer {
-        max-width: 425px;
+        max-width: 375px;
+        margin: 0 auto;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+    .footer .container {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        padding: 0 20px;
+    }
+}
+
+@media (max-width: 375px) {
+    .footer {
+        max-width: 320px;
         margin: 0 auto;
         margin-top: 20px;
         margin-bottom: 20px;
