--- a/src/components/banner/Banner.css
+++ b/src/components/banner/Banner.css
@@ -65,6 +65,9 @@
 }
 
 @media (max-width: 992px) {
+    .home-banner {
+        max-width: 992px;
+    }
     .home-banner .container {
         display: flex;
         align-items: center;
@@ -83,6 +86,9 @@
 }
 
 @media (max-width: 768px) {
+    .home-banner {
+        max-width: 768px;
+    }
     .home-banner .container {
         display: flex;
         flex-direction: column-reverse;
@@ -110,6 +116,9 @@
 }
 
 @media (max-width: 435px) {
+    .home-banner {
+        max-width: 430px;
+    }
     .home-banner .container {
         display: flex;
         flex-direction: column-reverse;
@@ -143,6 +152,10 @@
 }
 
 @media (max-width: 375px) {
+    .home-banner {
+    max-width: 375px;
+    width: 100%;
+    }
     .home-banner .container {
         display: flex;
         flex-direction: column-reverse;
