--- a/src/components/banner/Banner.css
+++ b/src/components/banner/Banner.css
@@ -117,7 +117,8 @@
 
 @media (max-width: 435px) {
     .home-banner {
-        max-width: 430px;
+        max-width: 435px;
+        width: 100%;
     }
     .home-banner .container {
         display: flex;
@@ -126,6 +127,7 @@
     }
     .banner-title {
         max-width: 375px;
+        width: 100%;
         margin-top: 10px;
     }
     .banner-title h2 {
@@ -163,6 +165,7 @@
     }
     .banner-title {
         max-width: 320px;
+        width: 100%;
         margin-top: 10px;
     }
     .banner-title h2 {
