--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -132,7 +132,8 @@
 
 @media (max-width: 435px) {
     .contact {
-        max-width: 424px;
+        max-width: 435px;
+        width: 100%;
         margin: 0;
     }
     .contact-title {
