--- a/src/components/product/Product.css
+++ b/src/components/product/Product.css
@@ -1,143 +1,187 @@
 .product {
-    width: 100%;
-    height: auto;
-    margin-top: 30px;
-    margin-bottom: 30px;
+  width: 100%;
+  height: auto;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .product-title {
-    text-align: center;
-    font-size: 32px;
-    font-weight: 700;
-    color: #37517e;
-    margin-bottom: 30px;
+  text-align: center;
+  font-size: 32px;
+  font-weight: 700;
+  color: #37517e;
+  margin-bottom: 30px;
 }
 
 .product-text {
-    text-align: center;
-    font-size: 16px;
-    color: #444444;
+  text-align: center;
+  font-size: 16px;
+  color: #444444;
 }
 
 .product-box {
-    margin-top: 30px;
+  margin-top: 30px;
 }
 
 .categories ul {
-    display: flex;
-    align-items: center;
-    gap: 30px;
+  display: flex;
+  align-items: center;
+  gap: 30px;
 }
 
 .categories ul li {
-    padding: 8px 20px;
-    border-radius: 50px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
+  padding: 8px 20px;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 .item-active {
-    background: #47b2e4;
-    color: #fff;
+  background: #47b2e4;
+  color: #fff;
 }
 
 .product-box-card {
-    margin-top: 30px;
+  margin-top: 30px;
 }
 
-.card {
-    width: 336px;
-    min-height: 300px;
-    border: 1px solid black;
+.box {
+  width: 1200px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  gap: 26px;
+}
+
+.card-item {
+  width: 280px;
+  height: 300px;
+}
+
+.card-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 @media (max-width: 1024px) {
-    .product {
-        max-width: 960px;
-        margin: 0 auto;
-    }
-    .categories ul {
-        display: flex;
-        align-items: center;
-        gap: 20px;
-    }
-    .categories ul li {
-        text-align: center;
-    }
+  .product {
+    max-width: 960px;
+    margin: 0 auto;
+  }
+  .categories ul {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+  }
+  .categories ul li {
+    text-align: center;
+  }
+  .box {
+    max-width: 960px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 59px;
+  }
 }
 
 @media (max-width: 992px) {
-    .product {
-        max-width: 960px;
-        margin: 0 auto;
-    }
-    .categories ul {
-        display: flex;
-        align-items: center;
-        gap: 20px;
-    }
-    .categories ul li {
-        text-align: center;
-    }
+  .product {
+    max-width: 960px;
+    margin: 0 auto;
+  }
+  .categories ul {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+  }
+  .categories ul li {
+    text-align: center;
+  }
+  .box {
+    max-width: 960px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 59px;
+  }
 }
 
 @media (max-width: 768px) {
-    .product {
-        max-width: 720px;
-        margin: 0 auto;
-    }
-    .categories ul {
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-    }
-    .categories ul li {
-        text-align: center;
-    }
+  .product {
+    max-width: 720px;
+    width: 100%;
+    margin: 0 auto;
+  }
+  .categories ul {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+  }
+  .categories ul li {
+    text-align: center;
+  }
+  .box {
+    max-width: 700px;
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 @media (max-width: 435px) {
-    .product {
-        max-width: 375px;
-        margin: 0 auto;
-    }
-    .categories ul {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-    }
-    .categories ul li {
-        display: flex;
-        width: 100%;
-    }
-    .product-box-card{
-        max-width: 350px;
-        margin: 0 auto;
-    }
-    .card {
-        margin: 0 auto;
-    }
+  .product {
+    max-width: 375px;
+    margin: 0 auto;
+  }
+  .categories ul {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .categories ul li {
+    display: flex;
+    width: 100%;
+  }
+  .product-box-card {
+    max-width: 350px;
+    margin: 0 auto;
+  }
+  .box {
+    max-width: 350px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+  }
+  .card-item {
+    margin: 0 auto;
+  }
 }
 
 @media (max-width: 375px) {
-    .product {
-        max-width: 320px;
-        margin: 0 auto;
-    }
-    .categories ul {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-    }
-    .categories ul li {
-        display: flex;
-        width: 100%;
-    }
-    .product-box-card{
-        max-width: 300px;
-        margin: 0 auto;
-    }
-    .card {
-        width: 270px;
-        margin: 0 auto;
-    }
+  .product {
+    max-width: 320px;
+    margin: 0 auto;
+  }
+  .categories ul {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .categories ul li {
+    display: flex;
+    width: 100%;
+  }
+  .product-box-card {
+    max-width: 300px;
+    margin: 0 auto;
+  }
+  .box {
+    max-width: 300px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+  }
+  .card-item {
+    margin: 0 auto;
+  }
 }
