--- a/src/components/product/Product.css
+++ b/src/components/product/Product.css
@@ -50,18 +50,121 @@
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
-  gap: 26px;
+  gap: 29px;
 }
 
 .card-item {
-  width: 280px;
-  height: 300px;
+  width: 380px;
+  height: 539x;
+  position: relative;
+  overflow: hidden;
+}
+
+.card-item:hover .hover-background {
+  visibility: visible;
 }
 
 .card-item img {
   width: 100%;
   height: 100%;
   object-fit: contain;
+  transition: transform 0.5s ease;
+}
+
+.card-item-content {
+  transition: transform 0.5s ease;
+}
+
+.card-item:hover img {
+  transform: scale(1.2);
+}
+
+.card-item .hover-background {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 35px;
+  background-color: rgba(55, 81, 126, 0.8);
+  visibility: hidden;
+  transition: visibility 0.3s ease;
+}
+
+.card-item .hover-background p {
+  width: 10%;
+  box-sizing: border-box;
+  padding: 0 10px;
+  right: 10px;
+  position: absolute;
+  font-size: 25px;
+  color: #fff;
+  cursor: pointer;
+}
+
+.card-item:hover .hover-background:hover {
+  visibility: visible;
+}
+
+.popup-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #444444;
+}
+
+.popup {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #444444;
+}
+
+.carousel-container {
+  width: 1200px;
+  height: 700px;
+  margin-top: 100px;
+  position: relative;
+}
+
+.carousel-image {
+  width: 400px;
+  height: 400px;
+  margin: 0 auto;
+}
+
+.carousel-image img {
+  width: 100%;
+  height: 100%;
+}
+
+.carousel-left {
+  position: absolute;
+  top: 45%;
+  cursor: pointer;
+  color: #fff;
+}
+
+.carousel-right { 
+  position: absolute;
+  top: 45%;
+  right: 0;
+  cursor: pointer;
+  color: #fff;
+}
+
+.carousel-close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  color: #fff;
+  cursor: pointer;
 }
 
 @media (max-width: 1024px) {
@@ -81,7 +184,48 @@
     max-width: 960px;
     display: flex;
     flex-wrap: wrap;
-    gap: 59px;
+    gap: 36px;
+  }
+  .card-item {
+    width: 295px;
+    height: 373px;
+    position: relative;
+    overflow: hidden;
+  }
+  .card-item-content {
+    transition: transform 0.5s ease;
+  }
+
+  .card-item:hover img {
+    transform: scale(1);
+  }
+  .image-container {
+    width: 295px;
+    height: 373px;
+  }
+  .image-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  .carousel-container {
+    max-width: 960px;
+    width: 100%;
+    max-height: 640px;
+    height: 100%;
+    margin-top: 100px;
+    position: relative;
+  }
+
+  .carousel-image {
+    width: 400px;
+    height: 400px;
+    margin: 0 auto;
+  }
+
+  .carousel-image img {
+    width: 100%;
+    height: 100%;
   }
 }
 
@@ -102,7 +246,41 @@
     max-width: 960px;
     display: flex;
     flex-wrap: wrap;
-    gap: 59px;
+    gap: 36px;
+  }
+  .card-item {
+    width: 295px;
+    height: 373px;
+    position: relative;
+    overflow: hidden;
+  }
+  .image-container {
+    width: 295px;
+    height: 373px;
+  }
+  .image-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  .carousel-container {
+    max-width: 960px;
+    width: 100%;
+    max-height: 650px;
+    height: 100%;
+    margin-top: 100px;
+    position: relative;
+  }
+
+  .carousel-image {
+    width: 400px;
+    height: 400px;
+    margin: 0 auto;
+  }
+
+  .carousel-image img {
+    width: 100%;
+    height: 100%;
   }
 }
 
@@ -125,6 +303,38 @@
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
+  }
+  .carousel-container {
+    max-width: 700px;
+    width: 100%;
+    max-height: 650px;
+    height: 100%;
+    position: relative;
+  }
+
+  .carousel-image {
+    width: 400px;
+    height: 400px;
+    margin: 0 auto;
+  }
+
+  .carousel-image img {
+    width: 100%;
+    height: 100%;
+  }
+  .carousel-left {
+    position: absolute;
+    top: 45%;
+    cursor: pointer;
+    color: #fff;
+  }
+  
+  .carousel-right {
+    position: absolute;
+    top: 45%;
+    right: 0;
+    cursor: pointer;
+    color: #fff;
   }
 }
 
@@ -155,6 +365,38 @@
   .card-item {
     margin: 0 auto;
   }
+  .carousel-container {
+    max-width: 375px;
+    width: 100%;
+    max-height: 650px;
+    height: 100%;
+    position: relative;
+  }
+
+  .carousel-image {
+    width: 300px;
+    height: 300px;
+    margin: 0 auto;
+  }
+
+  .carousel-image img {
+    width: 100%;
+    height: 100%;
+  }
+  .carousel-left {
+    position: absolute;
+    top: 35%;
+    cursor: pointer;
+    color: #fff;
+  }
+  
+  .carousel-right {
+    position: absolute;
+    top: 35%;
+    right: 0;
+    cursor: pointer;
+    color: #fff;
+  }
 }
 
 @media (max-width: 375px) {
@@ -184,4 +426,37 @@
   .card-item {
     margin: 0 auto;
   }
+  .carousel-container {
+    max-width: 320px;
+    width: 100%;
+    max-height: 550px;
+    height: 100%;
+    position: relative;
+  }
+
+  .carousel-image {
+    width: 250px;
+    height: 250px;
+    margin: 0 auto;
+  }
+
+  .carousel-image img {
+    width: 100%;
+    height: 100%;
+  }
+  .carousel-left {
+    position: absolute;
+    top: 30%;
+    cursor: pointer;
+    color: #fff;
+  }
+  
+  .carousel-right {
+    position: absolute;
+    top: 30%;
+    right: 0;
+    cursor: pointer;
+    color: #fff;
+  }
 }
+
