--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -3,11 +3,15 @@
     margin: 0 auto;
 }
 
+.contact .container {
+    margin-top: 74px;
+}
+
 .contact-text {
     text-align: center;
     font-size: 32px;
     font-weight: 700;
-    color: #37517e;
+    color: #393939;
     margin-top: 30px;
     margin-bottom: 30px;
 }
@@ -20,59 +24,24 @@
 }
 
 .contact-item-title{
-    width: 540px;
+    width: 100%;
     height: 450px;
     padding: 30px;
-    border-top: 3px solid #47b2e4;
-    border-bottom: 3px solid #47b2e4;
     background-color: #fff;
     display: flex;
-    flex-direction: column;
     align-items: flex-start;
-    gap: 40px;
-    box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.1);
+    justify-content: space-between;
+    border: 1px solid black;
+    margin-bottom: 30px;
 }
 
-.contact-this {
-    display: flex;
-    align-items: flex-start;
-    gap: 20px;
-}
-
-.contact-this-text {
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-}
-
-.contact-this-text h2{
-    color: #37517e;
-    font-size: 24px;
-    font-weight: 600;
-}
-
-.contact-this-text p {
-    color: #6182ba;
-    font-size: 18px;
-    font-weight: 400;
-}
-
-.contact-icon {
-    width: 44px;
-    height: 44px;
-    box-sizing: border-box;
-    padding: 11px;
-    border-radius: 50%;
-    background: #e7f5fb;
-}
-
-.icon-contact {
-    color: #47b2e4;
-    font-size: 20px;
+.info-text-icon {
+    color: #3a9c6f;
+    font-size: 30px;
 }
 
 .contact-map {
-    width: 550px;
+    width: 1200px;
     height: 450px;
 }
 
