--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -28,9 +28,13 @@
   font-size: 14px;
 }
 
-.footer-logo p {
+.footer-logo .link {
   margin-bottom: 10px;
   font-size: 14px;
+  color: #000;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 .footer-logo p strong {
