--- a/src/components/partner/Partner.css
+++ b/src/components/partner/Partner.css
@@ -1,8 +1,119 @@
 .partner {
-    margin-top: 30px;
+  margin-top: 30px;
 }
 
 .partner .container h2 {
-    text-align: center;
-    text-wrap: balance;
+  text-align: center;
+  text-wrap: balance;
+}
+
+.partner-box {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 30px;
+  margin-top: 40px;
+}
+
+.partner-card {
+  width: 299px;
+  height: 271px;
+  margin: 0 auto;
+  border: 1px solid rgba(224, 224, 224, 1);
+  border-radius: 33px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  cursor: pointer;
+  transform: scale(0.9);
+  transition: transform 0.3s ease;
+}
+
+.partner-card p {
+  text-align: center;
+}
+
+.partner-card:hover {
+  transform: scale(1);
+}
+
+@media (max-width: 1024px) {
+  .partner {
+    max-width: 1024px;
+    width: 100%;
+  }
+
+  .partner .container {
+    max-width: 960px;
+    width: 100%;
+  }
+
+  .partner-card {
+    transform: none;
+  }
+}
+
+@media (max-width: 992px) {
+  .partner {
+    max-width: 992px;
+    width: 100%;
+  }
+
+  .partner .container {
+    max-width: 960px;
+    width: 100%;
+  }
+}
+
+@media (max-width: 768px) {
+  .partner {
+    max-width: 768px;
+    width: 100%;
+  }
+
+  .partner .container {
+    max-width: 720px;
+    width: 100%;
+  }
+
+  .partner-box {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 425px) {
+  .partner {
+    max-width: 425px;
+    width: 100%;
+  }
+
+  .partner .container {
+    max-width: 375px;
+    width: 100%;
+  }
+
+  .partner-box {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media (max-width: 375px) {
+  .partner {
+    max-width: 375px;
+    width: 100%;
+  }
+
+  .partner .container {
+    max-width: 320px;
+    width: 100%;
+  }
+
+  .partner-box {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
