--- a/src/components/banner/Banner.css
+++ b/src/components/banner/Banner.css
@@ -1,193 +1,224 @@
-.home-banner {
-    width: 100%;
-    min-height: 500px;
-    /* background-color: #37517e; */
-    background-color: #f2f2f2;
-    padding: 120px 40px;
+.carousel-banner {
+  background: #f2f2f2;
 }
 
-.home-banner .container {
-    display: flex;
-    align-items: center;
-    gap: 30px;
+.carousel {
+  position: relative;
+  width: 1220px;
+  margin: 0 auto;
+  margin-top: 74px;
+  height: auto;
+  display: flex;
+}
+
+.home-banner {
+  width: 100%;
+  min-height: 500px;
+  background-color: #f2f2f2;
+  padding: 120px 40px;
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+
+.home-hidden {
+  display: none;
+}
+
+.arrow {
+  position: absolute;
+  top: 50%;
+  cursor: pointer;
+}
+
+.arrow-left {
+  width: 40px;
+  height: 40px;
+  left: 0;
+}
+
+.arrow-right {
+  width: 40px;
+  height: 40px;
+  right: 0px;
 }
 
 .banner-title {
-    width: 636px;
+  width: 636px;
 }
 
 .banner-title h2 {
-    font-size: 48px;
-    color: #fff;
-    margin-bottom: 10px;
+  font-size: 48px;
+  color: #fff;
+  margin-bottom: 10px;
 }
 
 .banner-title p {
-    font-size: 24px;
-    color: #ffffff99;
+  font-size: 24px;
+  color: #ffffff99;
 }
 
 .banner-image {
-    width: 600px;
-    height: auto;
-    box-sizing: border-box;
+  width: 600px;
+  height: 400px;
+  box-sizing: border-box;
 }
 
 .banner-image .banner-image-back {
-    width: 560px;
-    animation: bannerIm 2s ease-in-out infinite alternate-reverse both;
+  width: 560px;
+  animation: bannerIm 2s ease-in-out infinite alternate-reverse both;
 }
 
 @keyframes bannerIm {
-    0% {
-        margin-top: 10px;
-    }
-    100% {
-        margin-bottom: 10px;
-    }
+  0% {
+    margin-top: 10px;
+  }
+  100% {
+    margin-bottom: 10px;
+  }
 }
 
 @media (max-width: 1024px) {
-    .home-banner .container {
-        display: flex;
-        align-items: center;
-        gap: 24px;
-    }
-    .banner-title {
-        max-width: 500px;
-    }
-    .banner-image {
-        max-width: 500px;
-    }
-    .banner-image .banner-image-back {
-        max-width: 460px;
-        object-fit: contain;
-    }
+  .home-banner .container {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+  }
+  .banner-title {
+    max-width: 500px;
+  }
+  .banner-image {
+    max-width: 500px;
+  }
+  .banner-image .banner-image-back {
+    max-width: 460px;
+    object-fit: contain;
+  }
 }
 
 @media (max-width: 992px) {
-    .home-banner {
-        max-width: 992px;
-    }
-    .home-banner .container {
-        display: flex;
-        align-items: center;
-        gap: 2px;
-    }
-    .banner-title {
-        max-width: 450px;
-    }
-    .banner-image {
-        max-width: 450px;
-    }
-    .banner-image .banner-image-back {
-        max-width: 460px;
-        object-fit: contain;
-    }
+  .home-banner {
+    max-width: 992px;
+  }
+  .home-banner .container {
+    display: flex;
+    align-items: center;
+    gap: 2px;
+  }
+  .banner-title {
+    max-width: 450px;
+  }
+  .banner-image {
+    max-width: 450px;
+  }
+  .banner-image .banner-image-back {
+    max-width: 460px;
+    object-fit: contain;
+  }
 }
 
 @media (max-width: 768px) {
-    .home-banner {
-        max-width: 768px;
-    }
-    .home-banner .container {
-        display: flex;
-        flex-direction: column-reverse;
-        justify-content: center;
-    }
-    .banner-title {
-        max-width: 470px;
-    }
-    .banner-title h2 {
-        font-size: 30px;
-        text-wrap: wrap;
-    }
-    .banner-title p {
-        font-size: 24px;
-        text-wrap: wrap;
-    }
-    .banner-image {
-        max-width: 500px;
-        margin: 0;
-    }
-    .banner-image .banner-image-back {
-        max-width: 460px;
-        object-fit: contain;
-    }
+  .home-banner {
+    max-width: 768px;
+  }
+  .home-banner .container {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+  }
+  .banner-title {
+    max-width: 470px;
+  }
+  .banner-title h2 {
+    font-size: 30px;
+    text-wrap: wrap;
+  }
+  .banner-title p {
+    font-size: 24px;
+    text-wrap: wrap;
+  }
+  .banner-image {
+    max-width: 500px;
+    margin: 0;
+  }
+  .banner-image .banner-image-back {
+    max-width: 460px;
+    object-fit: contain;
+  }
 }
 
 @media (max-width: 435px) {
-    .home-banner {
-        max-width: 435px;
-        width: 100%;
-    }
-    .home-banner .container {
-        display: flex;
-        flex-direction: column-reverse;
-        justify-content: center;
-    }
-    .banner-title {
-        max-width: 375px;
-        width: 100%;
-        margin-top: 10px;
-    }
-    .banner-title h2 {
-        font-size: 20px;
-        text-align: center;
-        text-wrap: wrap;
-    }
+  .home-banner {
+    max-width: 435px;
+    width: 100%;
+  }
+  .home-banner .container {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+  }
+  .banner-title {
+    max-width: 375px;
+    width: 100%;
+    margin-top: 10px;
+  }
+  .banner-title h2 {
+    font-size: 20px;
+    text-align: center;
+    text-wrap: wrap;
+  }
 
-    .banner-title p {
-        font-size: 16px;
-        text-align: center;
-        text-wrap: wrap;
-    }
+  .banner-title p {
+    font-size: 16px;
+    text-align: center;
+    text-wrap: wrap;
+  }
 
-    .banner-image {
-        max-width: 320px;
-        margin: 0;
-    }
-    .banner-image .banner-image-back {
-        max-width: 320px;
-        height: auto;
-        object-fit: contain;
-    }
+  .banner-image {
+    max-width: 320px;
+    margin: 0;
+  }
+  .banner-image .banner-image-back {
+    max-width: 320px;
+    height: auto;
+    object-fit: contain;
+  }
 }
 
 @media (max-width: 375px) {
-    .home-banner {
+  .home-banner {
     max-width: 375px;
     width: 100%;
-    }
-    .home-banner .container {
-        display: flex;
-        flex-direction: column-reverse;
-        justify-content: center;
-    }
-    .banner-title {
-        max-width: 320px;
-        width: 100%;
-        margin-top: 10px;
-    }
-    .banner-title h2 {
-        font-size: 20px;
-        text-align: center;
-        text-wrap: wrap;
-    }
+  }
+  .home-banner .container {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+  }
+  .banner-title {
+    max-width: 320px;
+    width: 100%;
+    margin-top: 10px;
+  }
+  .banner-title h2 {
+    font-size: 20px;
+    text-align: center;
+    text-wrap: wrap;
+  }
 
-    .banner-title p {
-        font-size: 16px;
-        text-align: center;
-        text-wrap: wrap;
-    }
+  .banner-title p {
+    font-size: 16px;
+    text-align: center;
+    text-wrap: wrap;
+  }
 
-    .banner-image {
-        max-width: 320px;
-        margin: 0;
-    }
-    .banner-image .banner-image-back {
-        max-width: 320px;
-        height: auto;
-        object-fit: contain;
-    }
+  .banner-image {
+    max-width: 320px;
+    margin: 0;
+  }
+  .banner-image .banner-image-back {
+    max-width: 320px;
+    height: auto;
+    object-fit: contain;
+  }
 }
